Update project dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,14 +21,14 @@ Markdown==3.10.1
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
-ml_dtypes==0.5.4
+ml-dtypes==0.3.2
 namex==0.1.0
 numpy==1.26.4
 opt_einsum==3.4.0
 optree==0.18.0
 packaging==26.0
 pillow==12.1.0
-protobuf==6.33.5
+protobuf==4.25.8
 pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
@@ -38,9 +38,10 @@ rich==14.3.2
 setuptools==80.10.2
 six==1.17.0
 starlette==0.50.0
-tensorboard==2.20.0
+tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.20.0
+tensorflow==2.16.2
+tensorflow-intel==2.16.2
 termcolor==3.3.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
